dark mode contact fix

--- a/css/style.css
+++ b/css/style.css
@@ -564,4 +564,14 @@ a, p {
         border-color: rgb(78, 97, 24);
         filter: invert(100%);
     }
+
+    #linkc, #link2 {
+        box-shadow: 4px 5px #C8A2C8;
+        background-color: white;
+        color: black;
+    }
+
+    #linkc:hover, #link2:hover {
+        box-shadow: 4px 5px #5C5C5C;
+    }
 }
